cmake_minimum_required(VERSION 3.6)
project(test)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_INSTALL_PREFIX ../)
set(SRC_FILES demo.cc configer.cc parser.cc)
set(SRC_DIR src)
foreach(SRC_FILE ${SRC_FILES})
    list(APPEND FULL_SRC_FILES ${SRC_DIR}/${SRC_FILE})
endforeach()
find_library(YAMLCPP_LIB yaml-cpp REQUIRED)
find_library(SPDLOG_LIB spdlog REQUIRED)
add_executable(test ${FULL_SRC_FILES})
add_library(configer STATIC ./src/configer.cc ./src/parser.cc)
target_link_libraries(test PRIVATE ${YAMLCPP_LIB} ${SPDLOG_LIB})
install(TARGETS configer ARCHIVE DESTINATION ./lib)
